<resources>
    <string name="app_name">HortLink</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">home</string>
    <string name="buscar">buscar</string>
    <string name="carrinho">carrinho</string>
    <string name="pedidos">pedidos</string>
    <string name="perfil">perfil</string>
    <string name="status_ativo">Ativo</string>
    <string name="status_inativo">Inativo</string>
    <string name="title_activity_minha_vitrine">MinhaVitrine</string>
    <string name="title_activity_main">MainActivity</string>
</resources>